--- a/client/package.json
+++ b/client/package.json
@@ -10,31 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.1.5",
-    "@tanstack/react-query": "^5.75.4",
+    "@tanstack/react-query": "^5.75.5",
     "axios": "^1.9.0",
+    "framer-motion": "^12.10.4",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.2",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.5"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
