--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
+    "@headlessui/react": "^2.2.2",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
