--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@headlessui/react": "^2.2.2",
+    "@hookform/resolvers": "^5.0.1",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.508.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -26,7 +28,9 @@
     "react-loading-indicators": "^1.0.1",
     "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.5"
+    "recharts": "^2.15.3",
+    "tailwindcss": "^4.1.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
