--- a/server/package.json
+++ b/server/package.json
@@ -35,10 +35,12 @@
     "maxmind": "^4.3.25",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nanoid": "^5.1.5",
     "nodemailer": "^6.10.1",
     "nodemailer-html-to-text": "^3.2.0",
     "pug": "^3.0.3",
+    "sharp": "^0.34.1",
     "tar": "^7.4.3",
     "ua-parser-js": "^2.0.3",
     "winston": "^3.17.0"
