--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nanoid": "^5.1.5",
+    "node-cron": "^4.0.4",
     "nodemailer": "^6.10.1",
     "nodemailer-html-to-text": "^3.2.0",
     "pug": "^3.0.3",
