--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-router": "^1.120.2",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.508.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
