this is the new data of that inlude the admin page

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ yarn-error.log*
 # ================================
 # Server/Backend specific
 # ================================
+server/public/uploads/
 server/uploads/
 server/storage/
 server/**/*.sqlite
