--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "chapa-nodejs": "^2.0.1",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
