--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,13 @@
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
-    "antd": "^5.25.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.13",
     "framer-motion": "^12.11.3",
     "lucide-react": "^0.508.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
