--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
+    "agora-rtc-sdk-ng": "^4.23.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.11.3",
@@ -32,7 +33,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.25.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
