--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "agora-token": "^2.0.4",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "chapa-nodejs": "^2.0.1",
